--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jekyll-comments-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -14,7 +14,6 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "fs": "^0.0.1-security",
     "js-yaml": "^4.1.0"
   }
 }
